Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-28586

Paths with spaces aren't handled properly with cppcheck

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • None
    • Qt Creator 9.0.0
    • Analyzer: CppCheck
    • None
    • Linux/X11
    • 26cfa8696 (master), de968e7ff (master)

      This is printed in General Messages and also it looks like cppcheck failure is not handled properly as cppcheck progress indicators keep getting stuck on screen.

      The command "/usr/bin/cppcheck --enable=warning --enable=style --enable=performance --enable=portability --enable=information -j 16 --template="{file},{line},{severity},{id},{message}" --language=c++ --library=qt /projects/simplebrowser - Copy/webview.cpp" terminated with exit code 1.
      

        For Gerrit Dashboard: QTCREATORBUG-28586
        # Subject Branch Project Status CR V

            gres Sergey
            poikelin Joni Poikelin
            Votes:
            1 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes