Cppcheck: Quote file paths

This patch fixes the most common issues with path quoting.

Fixes: QTCREATORBUG-28586
Change-Id: Ia5f400d062a2459f49288fcd4bc316ced2b269e6
Reviewed-by: Marcus Tillmanns <marcus.tillmanns@qt.io>